fixed spelling error.

--- a/MudBlazorStarter/Pages/Index.razor
+++ b/MudBlazorStarter/Pages/Index.razor
@@ -4,6 +4,6 @@
 
 
 
-<MudText Typo="Typo.h5" Class="mt-8">Welcome to your new MubBlazor app.</MudText>
+<MudText Typo="Typo.h5" Class="mt-8">Welcome to your new MudBlazor app.</MudText>
 
 
